# readPom

./: CMakeLists.txt  README.md  main.cpp
TestData/: complex.pom  simplePom.pom
include/: ReadPom.hpp
src/: CMakeLists.txt
